[tool.poetry]
name = "test-langchain"
version = "0.1.0"
description = ""
authors = ["kwon0koang <kwon0koang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.16"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
