[tool.poetry]
name = "test-langchain"
version = "0.1.0"
description = ""
authors = ["kwon0koang <kwon0koang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.15"
langserve = "^0.0.51"
fastapi = "^0.110.1"
sse-starlette = "^2.1.0"
bs4 = "^0.0.2"
pypdf = "^4.2.0"
chromadb = "^0.5.0"
faiss-cpu = "^1.8.0"
sentence-transformers = "^2.7.0"
langchainhub = "^0.1.15"
langchain-openai = "^0.1.6"
openai = "^1.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
