[tool.poetry]
name = "test-langchain"
version = "0.1.0"
description = ""
authors = ["kwon0koang <kwon0koang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
langchain = "^0.2.3"
langserve = "^0.0.51"
fastapi = "^0.110.1"
sse-starlette = "^2.1.0"
bs4 = "^0.0.2"
chromadb = "^0.5.0"
faiss-cpu = "^1.8.0"
sentence-transformers = "^2.7.0"
langchainhub = "^0.1.15"
langchain-openai = "^0.1.6"
openai = "^1.28.1"
langsmith = "^0.1.57"
python-dotenv = "^1.0.1"
langchain-google-vertexai = "^1.0.4"
streamlit = "^1.35.0"
langchain-experimental = "^0.0.60"
langchain-huggingface = "^0.0.3"
pydantic = "^2.7.4"
langgraph = "^0.0"
ragas = "^0.1.10"

# PDF
pymupdf = "^1.24.1"
pypdf = "^4.2.0"
pymupdf4llm = "^0.0"

#
pdfplumber = "^0.11.2"
tabula-py = "^2.9.3"
camelot-py = "^0.11.0"
opencv-python = "^4.10.0.84"
ghostscript = "^0.7"

#
langchain-upstage = "^0.1.7"
langchain-ollama = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
